# senior-data-engineer-case-aidn

./: .env.example  .gitignore  Makefile  README.md  data_platform_case_study.md  docker-compose.yaml  generate-data.py  pyproject.toml
.dlt/: .sources
.github/prompts/: pr-review.md
.github/scripts/: deepseek_review.py
.github/workflows/: deepseek-review.yml
aidn/: __init__.py  cli.py  config.py  logging_setup.py
aidn/ingest/: __init__.py  bootstrap.py  pipeline.py  preprocess.py  transformers.py  validators.py
aidn/ingest/resources/: appointments.py  patient_consents.py  patients.py  providers.py
aidn/models/: __init__.py  ingest.py
dbt_aidn/: dbt_project.yml  profiles.yml
dbt_aidn/macros/: purge_erased_patients.sql
dbt_aidn/models/staging/: schema.yml  sources.yml  (+4 more)
dbt_aidn/seeds/: _seeds__models.yml  erasure_requests.csv
dbt_aidn/tests/: test_no_erased_patient_in_raw.sql
docker/postgres/: Dockerfile
notebooks/: 01_data_exploration.ipynb
pg_replication/: helpers.py
scripts/: cdc_smoke.py
seed/: cdc_smoke.sql
tests/integration/: __init__.py  conftest.py  test_appointments_replica_identity_full.py  test_bootstrap_snapshot.py  test_crash_resume.py  test_failed_jobs_raises.py  test_idempotent_re_run.py  test_postgres_cdc_infra.py  test_raw_patient_consents_cdc.py  test_raw_patient_consents_scd2.py  test_schema_contract_freeze.py
tests/unit/: test_appointments_resource.py  test_bootstrap.py  test_config.py  test_logging_setup.py  test_models_ingest.py  test_patients_resource.py  test_providers_resource.py  test_transformers.py
